Fixed scrollBar spostamenti

--- a/src/main/webapp/css/navbar.css
+++ b/src/main/webapp/css/navbar.css
@@ -32,6 +32,12 @@
   display:none;
 }
 
+
+#mySidenav::-webkit-scrollbar{
+  display: none;
+}
+
+
 /*---Navbar--*/
 .sidebar.active{
   position: fixed;
