--- a/src/main/webapp/css/obiettResp.css
+++ b/src/main/webapp/css/obiettResp.css
@@ -10,6 +10,7 @@
     transition: 0.5s;
     padding-top: 60px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    overflow-y:hidden;
 
 }
 
