--- a/src/main/webapp/css/spostamenti.css
+++ b/src/main/webapp/css/spostamenti.css
@@ -17,6 +17,10 @@ html, body{
     margin:0;
 }
 
+body::-webkit-scrollbar{
+    display:none;
+}
+
 
 .row {
     height: 100%;
@@ -211,8 +215,12 @@ html, body{
     background-color: #EEECF2;
     border-radius:30px;
     padding:35px 35px 0 35px;
-    overflow-x: scroll;
+    overflow-y: scroll;
+    overflow-x:hidden;
+}
 
+.background-content::-webkit-scrollbar{
+    display: none;
 }
 
 /*icona obiettivi*/
